<resources>

    <string name="label_name">名称</string>
    <string name="label_price">单价</string>
    <string name="label_number">数量</string>
    <string name="label_pos">位置</string>
    <string name="label_technician">技师</string>
    <string name="label_remark">备注</string>
    <string name="label_sale_men">销售员</string>
    <string name="label_order_code">单号</string>
    <string name="app_name">PicherDemo</string>

    <string name="title_activity_flash_light">FlashLightActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="text">服務預設自動續訂，詳情請致電客戶服務熱線+852 1512 9985查詢或以電郵cs@appledaily.com.tw聯絡我們。</string>

    <string name="payment_issue_tel_email">服務預設自動續訂，詳情參閱%1$s、致電%2$s，或%3$s聯絡我們。</string>
    <string name="payment_common_problem">常見問題</string>
    <string name="payment_service_tel">0809 012 555</string>
    <string name="payment_email">電郵</string>
    <string name="payment_all">服務預設自動續訂，詳情參閱常見問題、致電0809 012 555，或電郵聯絡我們。</string>

    <string name="payment_text1">服務預設自動續訂，詳情參閱</string>
    <string name="payment_text2">常見問題</string>
    <string name="payment_text3">、致電</string>
    <string name="payment_text4">0809 012 555</string>
    <string name="payment_text5">，或</string>
    <string name="payment_text6">電郵</string>
    <string name="payment_text7">聯絡我們。</string>


</resources>
