<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        style="@style/menu_inner_nav_style"
        android:text="@string/label_name"/>
    <TextView
        style="@style/menu_inner_nav_style"
        android:text="@string/label_price"/>
    <TextView
        style="@style/menu_inner_nav_style"
        android:text="@string/label_number"/>
    <TextView
        style="@style/menu_inner_nav_style"
        android:text="@string/label_pos"/>
    <TextView
        style="@style/menu_inner_nav_style"
        android:text="@string/label_technician"/>
    <TextView
        style="@style/menu_inner_nav_style"
        android:text="@string/label_remark"/>
    <TextView
        style="@style/menu_inner_nav_style"
        android:text="@string/label_sale_men"/>
    <TextView
        style="@style/menu_inner_nav_style"
        android:text="@string/label_order_code"/>
</LinearLayout>